--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+  
   font-family: Arial, sans-serif;
   background-color: #f2f2f2;
   margin: 0;
@@ -22,7 +23,7 @@ body {
   display: block;
 }
 
-.navigation {
+/* .navigation {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
@@ -34,6 +35,30 @@ body {
   line-height: 30px;
   font-size: 20px;
   cursor: pointer;
+} */
+
+.arrow {
+  position: absolute;
+  top: 50%;
+  width: 10px;
+  height: 10px;
+  border: solid black;
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 5px;
+  cursor: pointer;
+}
+
+.arrow-right {
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+  right: -20px;
+}
+
+.arrow-left {
+  transform: rotate(135deg);
+  -webkit-transform: rotate(135deg);
+  left: -20px;
 }
 
 .navigation-left {
