--- a/style.css
+++ b/style.css
@@ -1,5 +1,14 @@
+* {
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 18px;
+  font-family: 'Poppins', sans-serif;
+  line-height: 1.8;
+}
+
 body {
-  
   font-family: Arial, sans-serif;
   background-color: #f2f2f2;
   margin: 0;
@@ -11,7 +20,8 @@ body {
   margin: 20px auto;
   background-color: #fff;
   padding: 20px;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+  box-shadow: 0.1rem 0.2rem 0.5rem 0.2rem rgba(0, 0, 0, 0.327);
+  border-radius: 0.6rem;
   position: relative;
 }
 
@@ -23,51 +33,57 @@ body {
   display: block;
 }
 
-/* .navigation {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  width: 30px;
-  height: 30px;
-  background-color: #ccc;
-  border-radius: 50%;
-  text-align: center;
-  line-height: 30px;
-  font-size: 20px;
-  cursor: pointer;
-} */
-
 .arrow {
   position: absolute;
   top: 50%;
-  width: 10px;
-  height: 10px;
-  border: solid black;
-  border-width: 0 3px 3px 0;
-  display: inline-block;
-  padding: 5px;
   cursor: pointer;
 }
 
-.arrow-right {
-  transform: rotate(-45deg);
-  -webkit-transform: rotate(-45deg);
-  right: -20px;
-}
-
 .arrow-left {
-  transform: rotate(135deg);
-  -webkit-transform: rotate(135deg);
-  left: -20px;
+  transform: rotate(90deg);
+  left: -5%;
 }
 
-.navigation-left {
-  left: -15px;
+.arrow-right {
+  transform: rotate(270deg);
+  right: -5%;
 }
 
-.navigation-right {
-  right: -15px;
+.arrow span {
+  display: block;
+  border: solid #333;;
+  border-width: 0 5px 5px 0;
+  width: 1vw;
+  height: 1vw;
+  transform: rotate(45deg);
+  margin: -10px;
+  animation: animate 3s infinite;
+
 }
+
+.arrow span:nth-child(2) {
+  animation-delay: -0.2s;
+}
+
+.arrow span:nth-child(3) {
+  animation-delay: -0.4s;
+}
+
+@keyframes animate {
+  0% {
+      opacity: 0;
+      transform: rotate(45deg) translate(-20px, -20px);
+  }
+  50% {
+      opacity: 1;
+  }
+  100% {
+      opacity: 0;
+      transform: rotate(45deg) translate(20px, 20px);
+  }
+}
+
+
 
 h1 {
   text-align: center;
