--- a/style.css
+++ b/style.css
@@ -41,11 +41,13 @@ body {
 
 .arrow-left {
   transform: rotate(90deg);
+  -webkit-transform: rotate(90deg);
   left: -5%;
 }
 
 .arrow-right {
   transform: rotate(270deg);
+  -webkit-transform: rotate(270deg);
   right: -5%;
 }
 
@@ -159,5 +161,4 @@ h1 {
   width: 100%;
   height: 300px;
 }
-
 
