--- a/style.css
+++ b/style.css
@@ -16,7 +16,8 @@ body {
 }
 
 .container {
-  max-width: 600px;
+  max-width: 40%;
+  max-height: 80%;
   margin: 20px auto;
   background-color: #fff;
   padding: 20px;
@@ -179,6 +180,14 @@ h2 {
   margin-top: 20px;
   width: 100%;
   height: 300px;
+}
+
+footer {
+    margin: 65px auto 0;
+	color: #bfbfbf;
+	font-size: 0.7rem;
+	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+	text-align: center;
 }
 
 @media (min-width:700px) {
