fixing mobile display

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 }
 
 .container {
-  max-width: 40%;
+  max-width: 60%;
   max-height: 80%;
   margin: 20px auto;
   background-color: #fff;
@@ -156,30 +156,31 @@ h2 {
   }
 
 .workout-table {
-  margin-top: 20px;
-  width: 100%;
-  border-collapse: collapse;
+    font-size: 1rem;
+    margin-top: 20px;
+    width: 100%;
+    border-collapse: collapse;
 }
 
 .workout-table th,
 .workout-table td {
-  border: 1px solid #ccc;
-  padding: 8px;
-  text-align: left;
+    border: 1px solid #ccc;
+    padding: 8px;
+    text-align: left;
 }
 
 .workout-table th {
-  background-color: #f2f2f2;
+    background-color: #f2f2f2;
 }
 
 #statsContent {
-  display: none;
+    display: none;
 }
 
 #chartContainer {
-  margin-top: 20px;
-  width: 100%;
-  height: 300px;
+    margin-top: 20px;
+    width: 100%;
+    height: 300px;
 }
 
 footer {
@@ -192,7 +193,13 @@ footer {
 
 @media (max-width:700px) {
     
+    html {
+        font-size: 14px;
+    }
+
     .container {
         max-width: 70%;
     }
+
+    
 }
