--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 html {
@@ -157,7 +159,7 @@ h2 {
 
 .workout-table {
     font-size: 1rem;
-    margin-top: 20px;
+    margin-top: 1.1rem;
     width: 100%;
     border-collapse: collapse;
 }
