--- a/style.css
+++ b/style.css
@@ -299,7 +299,7 @@ hr {
 h4 {
     font-size: 1.2rem;
     color: #333;
-    margin-bottom: 0.4rem;
+    margin: 0 0.2rem 0.4rem 0;
 }
 
 .close-btn {
