--- a/style.css
+++ b/style.css
@@ -197,14 +197,34 @@ h2 {
     padding: 0.1rem 0.6rem 0.1rem 0.6rem;
     margin: 0px 0px 10px 0px;
     border-radius: 5px;
+}
+
+#popup-container > header,
+.workout > header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.workout header span {
     cursor: pointer;
 }
 
-h3 {
+.deleteButton {
+    width: 2rem;
+}
+
+header > h3 {
     margin: 0;
     font-size: 1.3rem;
     color: #333;
     text-transform: uppercase;
+    cursor: pointer;
+
+}
+
+header > h3:hover {
+    color: #33333382;
 }
   
 .workout-header {
@@ -257,9 +277,14 @@ h3 {
 }
 
 hr {
-    border: 1px solid #888;
+    border: 1px solid #4caf50;
     border-bottom: none;
-    opacity: 0.2;
+    opacity: 0.3;
+    margin: 0.5rem -0.5rem 0.5rem -0.5rem;
+}
+
+form.exercise-container {
+    padding-left: 0.5rem;
 }
 
 #popup-container {
@@ -287,13 +312,6 @@ hr {
 
 .pop-up-button:hover {
     border: solid 1px #333;
-}
-
-
-#popup-container > header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
 }
 
 h4 {
@@ -346,11 +364,11 @@ footer {
 }
   
 .form-group-pop-up input:hover {
-    box-shadow: 0 0 0 .15vw rgba(101, 193, 230, 0.632);
+    box-shadow: 0 0 0 .15rem rgba(101, 193, 230, 0.632);
 }
   
 .form-group-pop-up input:focus {
-    box-shadow: 0 0 0 .15vw rgb(101, 193, 230);
+    box-shadow: 0 0 0 .15rem rgb(101, 193, 230);
 }
 
 
