--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,6 @@
 }
 
 
-
 * {
   box-sizing: border-box;
   margin: 0;
@@ -30,24 +29,34 @@ body {
   padding: 0;
 }
 
-.container {
-  max-width: 60%;
-  max-height: 80%;
-  margin: 20px auto;
-  background-color: #fff;
-  padding: 20px;
-  box-shadow: 0.1rem 0.2rem 0.5rem 0.2rem rgba(0, 0, 0, 0.327);
-  border-radius: 0.6rem;
-  position: relative;
-  z-index: 0;
+main {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 5fr;
 }
+
+.container {
+    grid-column: 1/3;
+    grid-row: 2/3;
+    max-width: 60%;
+    max-height: 80%;
+    margin: 20px auto;
+    background-color: #fff;
+    padding: 20px;
+    box-shadow: 0.1rem 0.2rem 0.5rem 0.2rem rgba(0, 0, 0, 0.327);
+    border-radius: 0.6rem;
+    position: relative;
+    z-index: 0;
+}
+
 
 h1 {
     font-size: 2rem;
     text-align: center;
     margin: 1rem;
     color: var(--black-color);
-    transform: translateX(-30%);
+    grid-column: 1/2;
+    grid-row: 1/2;
 }
 
 h2 {
@@ -401,7 +410,8 @@ footer {
 
 nav {
     width: 100%;
-    background-color: #fff;
+    grid-column: 2/3;
+    grid-row: 1/2;
 }
 
 nav ul {
@@ -451,6 +461,8 @@ nav ul .nav-item .nav_link img {
         box-shadow: none;
         border: 1px solid rgba(101, 193, 230, 0.632);
     }
+
+   
 
     
 }
