--- a/css/new_style.css
+++ b/css/new_style.css
@@ -6,7 +6,7 @@
     --mint-green-color: #CBF7ED;
     --powder-blue-color: #8EA8C3;
     --ucla-blue-color: #406E8E;
-
+    --ghost-white-color: #F2F4FF;
 }
 
 
