--- a/css/mobile_style.css
+++ b/css/mobile_style.css
@@ -1,10 +1,9 @@
 @media screen and (max-width:700px) {
-    
+
     body {
         min-height: 100vh;
         min-width:300px;        /* Suppose you want minimum width of 300px */
-        width: auto !important;  /* Firefox will set width as auto */
-        width:300px;            /* As IE6 ignores !important it will set width as 300px; */
+        overflow: hidden;
     }
 
     header {
@@ -19,12 +18,17 @@
         overflow: hidden;
     }
 
-    h1 {
+    h2 {
         order: 1;
+        color: var(--ucla-blue-color);
+        font-weight: 900;
+        letter-spacing: -1px;
+        text-shadow: 2px 1px 1px #518bb585;
     }
 
-    section.container {
+    section.window-container {
         order: 2;
+        padding: 1rem;
     }
 
     /* ======== Navigation ========= */
@@ -32,9 +36,11 @@
     nav {
         order: 3;
         background-color: #fff;
-        padding: 0.7rem;
         width: 100%;
         height: 70px;
+        padding: 0.5rem;
+        border-top: solid 1px rgb(227, 227, 233);
+
     }
 
     nav ul {
@@ -90,87 +96,51 @@
 
     nav ul li.active .nav-link .nav-name {
         opacity: 1;
-        transform: translateY(25px);
+        transform: translateY(15px);
     }
-
-    /* .indicator {
-        position: absolute;
-        bottom: 40px;
-        left: 35px;
-        width: 70px;
-        height: 70px;
-        border-radius: 50%;
-        border: 6px solid var(--black-color);
-        background-color: rgb(221, 66, 66);
-        transition: 0.5s;
-    }
-
-    .indicator::before {
-        content: "";
-        position: absolute;
-        top: 50%;
-        left: -22px;
-        width: 20px;
-        height: 20px;
-        background: transparent;
-        border-top-right-radius: 20px;
-        box-shadow: 0 -10px 0 0 var(--black-color);
-    }
-
-    .indicator::after {
-        content: "";
-        position: absolute;
-        top: 50%;
-        right: -22px;
-        width: 20px;
-        height: 20px;
-        background: transparent;
-        border-top-left-radius: 20px;
-        box-shadow: 0 -10px 0 0 var(--black-color);
-    }
-
-    nav ul li:nth-child(1).active ~ .indicator {
-        transform: translateX(0);
-    }
-
-    nav ul li:nth-child(2).active ~ .indicator {
-        transform: translateX(calc(70px*1));
-    }
-
-    nav ul li:nth-child(3).active ~ .indicator {
-        transform: translateX(calc(70px*2));
-    }
-
-    nav ul li:nth-child(4).active ~ .indicator {
-        transform: translateX(calc(70px*3));
-    } */
 
     /* ========== routines ========== */
+
+    #routines-window {
+        width: 100%;
+    }
 
     #routines-window #routines-container {
         display: grid;
         grid-template-columns: 1fr 1fr;
-        grid-template-rows: auto;
+        grid-template-rows: 1fr 1fr 1fr;
         justify-content: center;
         align-items: center;
         column-gap: 10px;
         row-gap: 10px;
+        border: dashed 1px black;
+        height: 400px;
+        overflow: auto;
+        padding: 0.4rem;
+
     }
 
     #routines-window #routines-container .routine {
         background-color: var(--ghost-white-color);
         border-radius: 10px;
         border: solid 2px var(--black-color);
+        width: 7rem;
+        height: 7rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        transition: all 1s;
     }
 
-    #routines-window #routines-container .routine:hover {
+    #routines-window #routines-container .routine:focus {
         border: solid 2px var(--powder-blue-color);
-
+        box-shadow: 2px 2px 3px 3px var(--powder-blue-color);
     }
 
     #routines-window #routines-container .routine p {
-        font-size: 0.8em;
+        font-size: 1rem;
         padding: 0.3rem;
         text-align: center;
+        text-transform: uppercase;
     }
 }
